# hifigan_hw

./: .gitignore  CITATION.cff  LICENSE  README.md  convert_weights.py  demo.ipynb  inference.py  load_checkpoint.py  load_train_dataset.py  pyproject.toml  requirements.txt  requirements_kaggle.txt  requirements_train.txt  synthesize.py  train.py
src/configs/: baseline.yaml  finetune.yaml  inference.yaml
src/configs/dataloader/: dataloader.yaml  eval_dataloader.yaml
src/configs/datasets/: custom_dataset.yaml  dataset.yaml  eval_dataset.yaml  example_onebatchtest.yaml
src/configs/metrics/: example.yaml  mos_metric.yaml
src/configs/model/: baseline.yaml  generator.yaml  hifigan.yaml
src/configs/transforms/: transforms.yaml
src/configs/writer/: cometml.yaml  wandb.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  custom_dataset.py  data_utils.py  dataset.py  multispeaker_dataset.py
src/logger/: cometml.py  utils.py  wandb.py
src/loss/: __init__.py  gan_loss.py
src/lr_scheduler/: __init__.py  multiplicative_lr.py  warmup_with_cos_annealing.py
src/metrics/: __init__.py  example.py  metric_utils.py  neuro_mos.py  pesq.py  sdri.py  si_snri.py  stoi.py  tracker.py
src/model/: __init__.py  hifigan.py  wvmos.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py  trainer_utils.py
src/transforms/: __init__.py
src/transforms/spec_augs/: __init__.py  cmvn.py  complex_spec.py  mean_norm.py  melspec.py  permute.py  spec.py
src/transforms/wav_augs/: __init__.py  coloured_noise.py  (+5 more)
src/utils/: Path_tst.py  init_utils.py  perf_utils.py
(+2 files in other folders)
