[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
  line-length = 100
  target-version = ["py311"]
  include = '\.pyi?$'
  exclude = '''
  (
      \.git
      |src/configs
  )
  '''

[tool.isort]
  profile = "black"
  line_length = 100
  skip = [".git", "src/configs"]
